Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-119239

Incorrect reading of Plain PBM images

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P3: Somewhat important P3: Somewhat important
    • 6.6.2, 6.7.0 FF
    • 5.15.11, 6.6.0
    • Image formats
    • None
    • 975b3d5d5 (dev), 037aa20b3 (6.6)

      The reader currently tries to read a whole line of text (if there are no spaces) as a single number, in qt5 and qt6

      According to this spec spaces between any two ones or zeros are optional.

      This image exported from GIMP fails to read: A_ASCII_joined.pbm

      I tested the reading in qt5 by opening the images in Okular, which uses QImageReader.

        1. A_ASCII_joined.pbm
          0.4 kB
          user-faa7e
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            vgt Eirik Aavitsland
            jirauser69077 user-faa7e (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes